# in4200

./: .gitignore  README.md
IN4200_Oblig1_sigursv/: CMakeLists.txt  README.md  main.c  main_omp.c
IN4200_Oblig1_sigursv/include/: function_declarations.h
IN4200_Oblig1_sigursv/src/: PageRank_iterations1.c  PageRank_iterations2.c  read_graph_from_file1.c  read_graph_from_file2.c  top_n_webpages.c
IN4200_Oblig2_sigursv/: CMakeLists.txt  README.md  main.c  main_mpi.c
IN4200_Oblig2_sigursv/mpi/include/: function_declarations.h  mpi_function_declarations.h
IN4200_Oblig2_sigursv/mpi/src/: gs_iteration_2_chunks_mpi.c
IN4200_Oblig2_sigursv/serial/: gs_iteration_2_chunks.c  gs_iteration_normal.c  main.c
IN4200_Oblig2_sigursv/serial/include/: function_declarations.h  serial_function_declarations.h
IN4200_Oblig2_sigursv/serial/src/: gs_iteration_normal.c
IN4200_Oblig2_sigursv/utils/include/: helpers.h
IN4200_Oblig2_sigursv/utils/src/: helpers.c
oblig_1/: PageRank_iterations1.c  PageRank_iterations2.c  README.md  function_declarations.h  main.c  main_omp.c  read_graph_from_file1.c  read_graph_from_file2.c  top_n_webpages.c
oblig_1/include/: function_declarations.h
oblig_1/src/: PageRank_iterations1.c  PageRank_iterations2.c  read_graph_from_file1.c  read_graph_from_file2.c  top_n_webpages.c
